# AoC_2021

./: .gitignore  CMakeLists.txt  README.md
include/: aoc_generic.hpp
lib/: CMakeLists.txt  aoc_generic.cpp
src/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day13.cpp  day14.cpp  day15.cpp
